--- a/manifests/02-appgate-operator.yaml
+++ b/manifests/02-appgate-operator.yaml
@@ -2,7 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: appgate-operator-deployment
-  namespace: appgate-test-1
 spec:
   selector:
     matchLabels:
@@ -54,5 +53,13 @@ spec:
                 configMapKeyRef:
                   name: appgate-operator-conf
                   key: appgate-operator-two-way-sync
-      imagePullSecrets:
-        - name: appgate-registry
+            # Uncomment if you want to use a FERNET key to decrypt secrets
+            #- name: APPGATE_OPERATOR_FERNET_KEY
+            #  valueFrom:
+            #    configMapKeyRef:
+            #      name: appgate-operator-conf
+            #      key: appgate-operator-fernet-key
+         
+      # Only needed if we use a private registry
+      # imagePullSecrets:
+      #  - name: appgate-registry
