--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -23,8 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install mypy pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt -r requirements-build .txt
     - name: Lint with mypy
       run: |
         MYPYPATH=mypy-stubs mypy appgate
