Split requirements files

--- a/requirements-build.txt
+++ b/requirements-build.txt
@@ -1,9 +1,2 @@
-kubernetes>=11.0.0
-typedload>=2.2
-attrs>=17.0
-aiohttp>=3.6.2.0
-typing-extensions
-cryptography
-pytest
-mypy
-
+mypy==0.782
+pytest==6.0.2
