Fix entity examples to match the new metadata format

--- a/examples/v13/clientconnection.yaml
+++ b/examples/v13/clientconnection.yaml
@@ -1,11 +1,10 @@
 apiVersion: beta.appgate.com/v1
 kind: ClientConnection
-metadata:
-  name: clientconnection
-  passwords: []
-  singleton: true
 spec:
+  appgate_metadata:
+    passwords: []
   profiles:
   - identityProviderName: local
     name: test
     spaKeyName: test
+
