--- a/examples/v13/ippool.yaml
+++ b/examples/v13/ippool.yaml
@@ -1,11 +1,9 @@
 apiVersion: beta.appgate.com/v1
 kind: IpPool
-metadata:
-  name: simple-setup-ipv6
-  passwords: []
-  singleton: false
-  uuid: 60329888-6162-4835-8d27-957b12662410
 spec:
+  appgate_metadata:
+    passwords: []
+    uuid: 60329888-6162-4835-8d27-957b12662410
   ipVersion6: true
   name: simple_setup_ipv6
   ranges:
@@ -16,12 +14,10 @@ spec:
 ---
 apiVersion: beta.appgate.com/v1
 kind: IpPool
-metadata:
-  name: default-pool-v6
-  passwords: []
-  singleton: false
-  uuid: 6935b379-205d-4fdd-847f-a0b5f14aff53
 spec:
+  appgate_metadata:
+    passwords: []
+    uuid: 6935b379-205d-4fdd-847f-a0b5f14aff53
   ipVersion6: true
   name: default pool v6
   ranges:
@@ -32,12 +28,10 @@ spec:
 ---
 apiVersion: beta.appgate.com/v1
 kind: IpPool
-metadata:
-  name: simple-setup-ipv4
-  passwords: []
-  singleton: false
-  uuid: bc5f8c54-23b7-4e36-852d-f93fc0480f73
 spec:
+  appgate_metadata:
+    passwords: []
+    uuid: bc5f8c54-23b7-4e36-852d-f93fc0480f73
   name: simple_setup_ipv4
   ranges:
   - first: 15.0.0.0
@@ -47,15 +41,14 @@ spec:
 ---
 apiVersion: beta.appgate.com/v1
 kind: IpPool
-metadata:
-  name: default-pool-v4
-  passwords: []
-  singleton: false
-  uuid: f572b4ab-7963-4a90-9e5a-3bf033bfe2cc
 spec:
+  appgate_metadata:
+    passwords: []
+    uuid: f572b4ab-7963-4a90-9e5a-3bf033bfe2cc
   name: default pool v4
   ranges:
   - first: 192.168.100.1
     last: 192.168.100.254
   tags:
   - builtin
+
