--- a/examples/v13/administrativerole.yaml
+++ b/examples/v13/administrativerole.yaml
@@ -1,11 +1,9 @@
 apiVersion: beta.appgate.com/v1
 kind: AdministrativeRole
-metadata:
-  name: system-administration
-  passwords: []
-  singleton: false
-  uuid: b0adbc60-7ed4-11e4-b4a9-0800200c9a66
 spec:
+  appgate_metadata:
+    passwords: []
+    uuid: b0adbc60-7ed4-11e4-b4a9-0800200c9a66
   name: System Administration
   notes: Built-in Administrative Role that has access to all.
   privileges:
@@ -21,12 +19,10 @@ spec:
 ---
 apiVersion: beta.appgate.com/v1
 kind: AdministrativeRole
-metadata:
-  name: api-access
-  passwords: []
-  singleton: false
-  uuid: 72cbe03c-4e35-4ff8-9e2b-9bcf88e689f5
 spec:
+  appgate_metadata:
+    passwords: []
+    uuid: 72cbe03c-4e35-4ff8-9e2b-9bcf88e689f5
   name: Api Access
   notes: Built-in Administrative Role for API usage..
   privileges:
@@ -155,3 +151,4 @@ spec:
     type: Create
   tags:
   - builtin
+
