--- a/examples/v13/adminmfasettings.yaml
+++ b/examples/v13/adminmfasettings.yaml
@@ -1,9 +1,9 @@
 apiVersion: beta.appgate.com/v1
 kind: AdminMfaSettings
-metadata:
-  name: adminmfasettings
-  passwords: []
-  singleton: true
 spec:
-  exemptedUsers: ['CN=admin,OU=local']
+  appgate_metadata:
+    passwords: []
+  exemptedUsers:
+  - CN=admin,OU=local
   providerId: 03542d1e-733c-4c43-a567-d28fbc4649a7
+
