--- a/examples/v13/condition.yaml
+++ b/examples/v13/condition.yaml
@@ -1,11 +1,9 @@
 apiVersion: beta.appgate.com/v1
 kind: Condition
-metadata:
-  name: always
-  passwords: []
-  singleton: false
-  uuid: ee7b7e6f-e904-4b4f-a5ec-b3bef040643e
 spec:
+  appgate_metadata:
+    passwords: []
+    uuid: ee7b7e6f-e904-4b4f-a5ec-b3bef040643e
   expression: return true;
   name: Always
   notes: Condition for built-in usage.
@@ -13,3 +11,4 @@ spec:
   repeatSchedules: []
   tags:
   - builtin
+
