--- a/examples/v13/devicescript.yaml
+++ b/examples/v13/devicescript.yaml
@@ -1,14 +1,14 @@
 apiVersion: beta.appgate.com/v1
-kind: DeviceScript 
-metadata:
-  name: fooscript
-  passwords: []
-  singleton: false
-  uuid: 6f096196-1867-4c62-8106-6e0e2f2718ef 
+kind: DeviceScript
 spec:
+  appgate_metadata:
+    passwords: []
+    uuid: 6f096196-1867-4c62-8106-6e0e2f2718ef
   file: aGVsbG8gYWl0b3IK
   filename: license_174782f9e66.txt
   name: FooScript
   notes: hello
-  tags: [foo, bar]
+  tags:
+  - foo
+  - bar
 
