--- a/docker/Dockerfile-build
+++ b/docker/Dockerfile-build
@@ -1,4 +1,4 @@
-FROM python:rc-slim
+FROM python:3.9-slim
 RUN apt-get update && \
     apt-get install make gcc libffi-dev --yes
 COPY requirements-build.txt /root/
