--- a/manifests/02-appgate-operator.yaml
+++ b/manifests/02-appgate-operator.yaml
@@ -53,6 +53,11 @@ spec:
                 configMapKeyRef:
                   name: appgate-operator-conf
                   key: appgate-operator-two-way-sync
+            - name: APPGATE_OPERATOR_SSL_NO_VERIFY
+              valueFrom:
+                configMapKeyRef:
+                  name: appgate-operator-conf
+                  key: appgate-operator-ssl-no-verify
             # Uncomment if you want to use a FERNET key to decrypt secrets
             #- name: APPGATE_OPERATOR_FERNET_KEY
             #  valueFrom:
