Add tests to test the current implementation for x-name
This field is used as a workaround for fields with names conflicting python keywords

--- a/tests/resources/test_entity.yaml
+++ b/tests/resources/test_entity.yaml
@@ -279,6 +279,9 @@ definitions:
         type: string
       fieldFour:
         type: string
+      fromm:
+        type: string
+        x-name: from
   EntityTest2:
     type: object
     properties:
