Allow reserved names as field names
Right now we always create a field with name `name + name[-1]` serialized to name.

--- a/tests/resources/test_entity.yaml
+++ b/tests/resources/test_entity.yaml
@@ -279,9 +279,8 @@ definitions:
         type: string
       fieldFour:
         type: string
-      fromm:
+      from:
         type: string
-        x-name: from
   EntityTest2:
     type: object
     properties:
