[SA-15660] Update the v13 spec to use the new code

--- a/api_specs/v13/ca.yml
+++ b/api_specs/v13/ca.yml
@@ -159,9 +159,8 @@ definitions:
   CertificateDetails:
     type: object
     description: X509 certificate details.
-    format:
-      type: certificate
-      source: pem
+    format: certificate
+    x-certificate-source: pem
     readOnly: true
     properties:
       version:
