--- a/api_specs/v13/entitlement.yml
+++ b/api_specs/v13/entitlement.yml
@@ -180,7 +180,7 @@ definitions:
             default: and
           conditions:
             type: array
-            description: List of Condition IDs applies to this Entitleent.
+            description: List of Condition IDs applies to this Entitlement.
             items:
               x-uuid-ref: Condition
               type: string
