[SA-15660] Fix api_spec v12 to use the new code

--- a/api_specs/v12/ca.yml
+++ b/api_specs/v12/ca.yml
@@ -145,9 +145,8 @@ definitions:
     type: object
     description: X509 certificate details.
     readOnly: true
-    format:
-      type: certificate
-      source: pem
+    format: certificate
+    x-certificate-source: pem
     properties:
       version:
         type: number
