--- a/api_specs/v12/site.yml
+++ b/api_specs/v12/site.yml
@@ -174,8 +174,7 @@ definitions:
             items:
               type: object
               properties:
-                fromm:
-                  x-name: from
+                from:
                   type: string
                   format: uuid
                   x-uuid-ref: IpPool
