--- a/examples/v13/clientconnection.yaml
+++ b/examples/v13/clientconnection.yaml
@@ -1,5 +1,7 @@
 apiVersion: beta.appgate.com/v1
 kind: ClientConnection
+metadata:
+  name: clientconnection
 spec:
   appgate_metadata:
     passwords: []
@@ -7,4 +9,3 @@ spec:
   - identityProviderName: local
     name: test
     spaKeyName: test
-
