--- a/examples/v13/condition.yaml
+++ b/examples/v13/condition.yaml
@@ -1,5 +1,7 @@
 apiVersion: beta.appgate.com/v1
 kind: Condition
+metadata:
+  name: always
 spec:
   appgate_metadata:
     passwords: []
@@ -11,4 +13,3 @@ spec:
   repeatSchedules: []
   tags:
   - builtin
-
