--- a/examples/v13/criteriascripts.yaml
+++ b/examples/v13/criteriascripts.yaml
@@ -1,5 +1,7 @@
 apiVersion: beta.appgate.com/v1
 kind: CriteriaScripts
+metadata:
+  name: everyone
 spec:
   appgate_metadata:
     passwords: []
@@ -12,6 +14,8 @@ spec:
 ---
 apiVersion: beta.appgate.com/v1
 kind: CriteriaScripts
+metadata:
+  name: noone
 spec:
   appgate_metadata:
     passwords: []
@@ -20,4 +24,3 @@ spec:
   notes: Something something something
   tags:
   - operator
-
