--- a/examples/v13/globalsettings.yaml
+++ b/examples/v13/globalsettings.yaml
@@ -1,5 +1,7 @@
 apiVersion: beta.appgate.com/v1
 kind: GlobalSettings
+metadata:
+  name: globalsettings
 spec:
   administrationTokenExpiration: 1337
   appDiscoveryDomains: []
@@ -13,4 +15,3 @@ spec:
   fips: false
   geoIpUpdates: false
   vpnCertificateExpiration: 525600
-
