--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,9 +5,6 @@ on:
     branches:
       - master
 
-env:
-  IMAGE_NAME: sdp-operator
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -37,7 +34,8 @@ jobs:
       - name: Build image
         run:  docker build --build-arg SPEC_VERSION=v12 -f docker/Dockerfile . -t sdp-operator:v12
       - name: Log into registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+PACKAGES_TOKEN
+        run: echo "${{ secrets.PACKAGES_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Push image
         run: |
           docker tag sdp-operator:v12 ghcr.io/appgate/sdp-operator:v12
@@ -52,7 +50,7 @@ jobs:
       - name: Build image
         run:  docker build --build-arg SPEC_VERSION=v13 -f docker/Dockerfile . -t sdp-operator:v13
       - name: Log into registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+        run: echo "${{ secrets.PACKAGES_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Push image
         run: |
           docker tag sdp-operator:v13 ghcr.io/appgate/sdp-operator:v13
@@ -67,7 +65,7 @@ jobs:
       - name: Build image
         run:  docker build --build-arg SPEC_VERSION=v14 -f docker/Dockerfile . -t sdp-operator:v14
       - name: Log into registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+        run: echo "${{ secrets.PACKAGES_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Push image
         run: |
           docker tag sdp-operator:v14 ghcr.io/appgate/sdp-operator:v14
