--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -28,13 +28,19 @@ jobs:
   v12:
     needs: build
     runs-on: ubuntu-latest
+    environment:
+      name: docker-images
     if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v2
       - name: Build image
         run:  docker build --build-arg SPEC_VERSION=v12 -f docker/Dockerfile . -t sdp-operator:v12
-      - name: Log into registry
-        run: echo "${{ secrets.PACKAGES_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.PACKAGES_USER }}
+          password: ${{ secrets.PACKAGES_TOKEN }}
       - name: Push image
         run: |
           docker tag sdp-operator:v12 ghcr.io/appgate/sdp-operator:v12
@@ -43,13 +49,19 @@ jobs:
   v13:
     needs: build
     runs-on: ubuntu-latest
+    environment:
+      name: docker-images
     if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v2
       - name: Build image
         run:  docker build --build-arg SPEC_VERSION=v13 -f docker/Dockerfile . -t sdp-operator:v13
-      - name: Log into registry
-        run: echo "${{ secrets.PACKAGES_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.PACKAGES_USER }}
+          password: ${{ secrets.PACKAGES_TOKEN }}
       - name: Push image
         run: |
           docker tag sdp-operator:v13 ghcr.io/appgate/sdp-operator:v13
@@ -58,13 +70,19 @@ jobs:
   v14:
     needs: build
     runs-on: ubuntu-latest
+    environment:
+      name: docker-images
     if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v2
       - name: Build image
         run:  docker build --build-arg SPEC_VERSION=v14 -f docker/Dockerfile . -t sdp-operator:v14
-      - name: Log into registry
-        run: echo "${{ secrets.PACKAGES_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.PACKAGES_USER }}
+          password: ${{ secrets.PACKAGES_TOKEN }}
       - name: Push image
         run: |
           docker tag sdp-operator:v14 ghcr.io/appgate/sdp-operator:v14
