--- a/api_specs/v14/client_connections.yml
+++ b/api_specs/v14/client_connections.yml
@@ -1,7 +1,10 @@
 client-connections:
   get:
     summary: View Client Connection settings.
-    description: View Client Connection settings.
+    description: >-
+      View Client Connection settings.
+      With API version 12, this API has changed significantly in order to manage client profiles.
+      It is still possible to use the older APIs using older Accept headers.
     tags:
       - Client Connections
     parameters:
@@ -33,7 +36,10 @@ client-connections:
         $ref: './common.yml#/responses/UnexpectedError'
   put:
     summary: Update Client Connection settings.
-    description: Update Client Connection settings.
+    description: >-
+      Update Client Connection settings.
+      With API version 12, this API has changed significantly in order to manage client profiles.
+      It is still possible to use the older APIs using older Accept headers.
     tags:
       - Client Connections
     parameters:
@@ -139,15 +145,11 @@ definitions:
     properties:
       spaMode:
         type: string
-        description: SPA mode. Deprecated as of 5.4. Use global-settings API instead.
-        deprecated: true
+        default: TCP
+        description: SPA mode.
         enum:
           - TCP
           - 'UDP-TCP'
-      profileHostname:
-        type: string
-        description: The hostname to use for generating profile URLs.
-        example: appgate.company.com
       profiles:
         type: array
         description: Client Profiles.
