--- a/api_specs/v14/dashboard.yml
+++ b/api_specs/v14/dashboard.yml
@@ -185,10 +185,6 @@ stats-appliances:
                       type: number
                       description: The number of active Appliances with the Connector role enabled.
                       example: 6
-                    portalCount:
-                      type: number
-                      description: The number of active Appliances with the Portal role enabled.
-                      example: 6
                     data:
                       type: array
                       items:
@@ -237,13 +233,11 @@ stats-appliances:
                           logForwarder:
                             $ref: '#/definitions/ApplianceRole'
                           gateway:
-                            $ref: '#/definitions/ApplianceWithSessionsRole'
+                            $ref: '#/definitions/GatewayApplianceRole'
                           connector:
                             $ref: '#/definitions/ApplianceRole'
-                          portal:
-                            $ref: '#/definitions/ApplianceRole'
                           appliance:
-                            $ref: '#/definitions/ApplianceWithSessionsRole'
+                            $ref: '#/definitions/ApplianceRole'
                           cpu:
                             type: number
                             format: float
@@ -646,12 +640,6 @@ session-info-distinguished-name:
                                     items:
                                       type: string
                                       example: 0-255
-                            policyNames:
-                              type: array
-                              description: Names of the Policies that has granted this Entitlement.
-                              items:
-                                type: string
-                                example: Finance
                       discoveredApps:
                         type: array
                         description: >-
@@ -662,10 +650,6 @@ session-info-distinguished-name:
                           type: string
                           description: Full hostname for the Discovered App.
                           example: new-service.internal.company.com
-                      vpn:
-                        type: object
-                        description: VPN details of the session
-                        additionalProperties: true
                       site:
                         type: string
                         description: The Site name for the Gateway.
@@ -835,12 +819,12 @@ definitions:
         type: string
         description: Optional details for extra information like error messages.
         example: Cannot reach appliance. Please check Controller logs.
-  ApplianceWithSessionsRole:
+  GatewayApplianceRole:
     allOf:
       - $ref: '#/definitions/ApplianceRole'
       - type: object
         properties:
           numberOfSessions:
             type: integer
-            description: Number of active sessions on the Gateway or Portal.
+            description: Number of active sessions on the gateway.
             example: 156
