--- a/api_specs/v14/license.yml
+++ b/api_specs/v14/license.yml
@@ -38,31 +38,12 @@ license:
     requestBody:
       $ref: '#/requestBodies/LicenseImport'
   delete:
-    summary: Delete all Licenses.
-    description: Delete all Licenses to revert to the Built-in License.
-    deprecated: true
+    summary: Delete the current License.
+    description: Delete the current License to revert to the Built-in License.
     tags:
       - License
     parameters:
       - $ref: './common.yml#/parameters/authorization'
-    responses:
-      '204':
-        description: Licenses were deleted successfully.
-      '401':
-        $ref: './common.yml#/responses/TokenError'
-      '403':
-        $ref: './common.yml#/responses/PermissionError'
-      '500':
-        $ref: './common.yml#/responses/UnexpectedError'
-license-id:
-  delete:
-    summary: Delete a specific License.
-    description: Delete a specific License from list of Licenses.
-    tags:
-      - License
-    parameters:
-      - $ref: './common.yml#/parameters/authorization'
-      - $ref: './common.yml#/parameters/id'
     responses:
       '204':
         description: License was deleted successfully.
@@ -70,15 +51,13 @@ license-id:
         $ref: './common.yml#/responses/TokenError'
       '403':
         $ref: './common.yml#/responses/PermissionError'
-      '404':
-        $ref: './common.yml#/responses/NotFoundError'
       '500':
         $ref: './common.yml#/responses/UnexpectedError'
 license-next:
   get:
-    summary: Get the next License.
+    summary: Get the current License.
     description: >-
-      Get the next License which will be activated when CA certificate switch occurs.
+      Get the current License which will be activated when CA certificate switch occurs.
       Licenses are bound to the CA Certificate.
     tags:
       - License
@@ -162,12 +141,8 @@ definitions:
     type: object
     description: License details and current usage.
     properties:
-      licenses:
-        type: array
-        items:
-          $ref: '#/definitions/License'
       entitled:
-        $ref: '#/definitions/LicenseEntitlement'
+        $ref: '#/definitions/License'
       requestCode:
         type: string
         description: Request code for the license. Use this code to get a license.
@@ -180,84 +155,49 @@ definitions:
             type: number
             description: The amount of licensed users in the system currently.
             example: 152
-          portalUsers:
-            type: number
-            description: The amount of licensed portal users in the system currently.
-            example: 24
           sites:
             type: number
-            description: The amount of Sites in the system currently.
+            description: The amount of sites in the system currently.
             example: 3
-          connectorGroups:
-            type: number
-            description: The amount of grouped Connector clients in the system currently.
-            example: 4
       error:
         type: string
-        deprecated: true
-        description: Error message if there is a problem with one or more License.
-        example: License has expired.
-  LicenseEntitlement:
+        description: Error message if there is a problem with the license.
+        example: License is expired.
+  License:
     type: object
-    description: License entitlement details.
+    description: License details.
     properties:
+      id:
+        type: string
+        format: uuid
+        description: Unique ID for the license.
+        example: 4c07bc67-57ea-42dd-b702-c2d6c45419fc
+      type:
+        type: number
+        description: 'Type of the license. 1: production, 2: installation, 3: test, 4: built-in, 5: aws built-in'
+        example: 2
+      request:
+        type: string
+        description: >-
+          Request code for the license. If built-in license is in place, use this code to get a license.
+          It's based on the CA certificate.
+        example: 1675ab19fe2
+      expiration:
+        type: string
+        format: 'date-time'
+        description: The expiration date of the license.
       maxUsers:
         type: number
-        description: The maximum users allowed by the license.
-        example: 200
-      maxPortalUsers:
-        type: number
-        description: The maximum Portal users allowed by the license.
-        example: 200
-      usersLeaseTimeHours:
-        type: number
         description: >-
-          Number of hours User Licenses will be reserved for users before they are reclaimable by others.
-        example: 720
-      portalUsersLeaseTimeHours:
-        type: number
-        description: >-
-          Number of hours User Licenses will be reserved for Portal users before they are reclaimable by others.
-        example: 720
+          The maximum users allowed by the license.
+          If it's the usage details, then it's the amount of licensed users in the system currently.
+        example: 200
       maxSites:
         type: number
         description: >-
           The maximum sites allowed by the license.
           If it's the usage details, then it's the amount of sites in the system currently.
         example: 5
-      maxConnectorGroups:
-        type: number
-        description: The maximum Connector groups allowed by the license.
-        example: 150
-  License:
-    allOf:
-      - $ref: '#/definitions/LicenseEntitlement'
-      - type: object
-        description: License details.
-        properties:
-          id:
-            type: string
-            format: uuid
-            description: Unique ID for the license.
-            example: 4c07bc67-57ea-42dd-b702-c2d6c45419fc
-          type:
-            type: number
-            description: 'Type of the license. 1: production, 2: installation, 3: test, 4: built-in, 5: aws built-in'
-            example: 2
-          request:
-            type: string
-            description: >-
-              Request code for the license. If built-in license is in place, use this code to get a license.
-              It's based on the CA certificate.
-            example: 1675ab19fe2
-          expiration:
-            type: string
-            format: 'date-time'
-            description: The expiration date of the license.
-          error:
-            type: string
-            description: Error message if the License is not invalid.
-            example: License has expired.
   LicenseImport:
     type: object
     description: Object to import a new license.
