Freeze pip dependencies.
The code does not work with new attr version

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,38 @@
-kubernetes>=11.0.0
-typedload>=2.2
-attrs>=17.0
-aiohttp>=3.6.2.0
-typing-extensions
-cryptography
+aiohttp==3.7.4.post0
+async-timeout==3.0.1
+attrs==20.3.0
+cachetools==4.2.2
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+cryptography==3.4.7
+google-auth==1.30.0
+idna==2.10
+iniconfig==1.1.1
+kubernetes==12.0.1
+more-itertools==8.7.0
+multidict==5.1.0
+mypy==0.782
+mypy-extensions==0.4.3
+oauthlib==3.1.0
+packaging==20.9
+pluggy==0.13.1
+py==1.10.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pyparsing==2.4.7
+pytest==6.0.2
+python-dateutil==2.8.1
+PyYAML==5.4.1
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
+six==1.16.0
+toml==0.10.2
+typed-ast==1.4.3
+typedload==2.7
+typing-extensions==3.10.0.0
+urllib3==1.26.4
+websocket-client==0.59.0
+yarl==1.6.3
