Fix yaml spec for v14 and v15

--- a/api_specs/v14/administrative_role.yml
+++ b/api_specs/v14/administrative_role.yml
@@ -240,7 +240,7 @@ definitions:
           - TokenRecord
           - Blacklist
           - UserLicense
-          - OnBoardedDevice
+          - RegisteredDevice
           - AllocatedIp
           - SessionInfo
           - AuditLog
