Add some fixes to api v15 specification

--- a/api_specs/v15/administrative_role.yml
+++ b/api_specs/v15/administrative_role.yml
@@ -232,13 +232,17 @@ definitions:
           - LocalUser
           - Policy
           - Site
-          - DeviceScript
+          - DeviceClaimScript
           - EntitlementScript
           - RingfenceRule
           - ApplianceCustomization
+          - TrustedCertificate
+          - UserClaimScript
           - OtpSeed
+          - Fido2Device
           - TokenRecord
           - Blacklist
+          - License
           - UserLicense
           - RegisteredDevice
           - AllocatedIp
